packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_qwik_react.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2985
expression: output
---
==INPUT==


import { componentQrl, inlinedQrl, useLexicalScope, useHostElement, useStore, useTaskQrl, noSerialize, SkipRerender, implicit$FirstArg } from '@builder.io/qwik';
import { jsx, Fragment } from '@builder.io/qwik/jsx-runtime';
import { isBrowser, isServer } from '@builder.io/qwik/build';

function qwikifyQrl(reactCmpQrl) {
    return /*#__PURE__*/ componentQrl(inlinedQrl((props)=>{
        const [reactCmpQrl] = useLexicalScope();
        const hostElement = useHostElement();
        const store = useStore({});
        let run;
        if (props['client:visible']) run = 'visible';
        else if (props['client:load'] || props['client:only']) run = 'load';
        useTaskQrl(inlinedQrl(async (track)=>{
            const [hostElement, props, reactCmpQrl, store] = useLexicalScope();
            track(props);
            if (isBrowser) {
                if (store.data) store.data.root.render(store.data.client.Main(store.data.cmp, filterProps(props)));
                else {
                    const [Cmp, client] = await Promise.all([
                        reactCmpQrl.resolve(),
                        import('./client-f762f78c.js')
                    ]);
                    let root;
                    if (hostElement.childElementCount > 0) root = client.hydrateRoot(hostElement, client.Main(Cmp, filterProps(props), store.event));
                    else {
                        root = client.createRoot(hostElement);
                        root.render(client.Main(Cmp, filterProps(props)));
                    }
                    store.data = noSerialize({
                        client,
                        cmp: Cmp,
                        root
                    });
                }
            }
        }, "qwikifyQrl_component_useWatch_x04JC5xeP1U", [
            hostElement,
            props,
            reactCmpQrl,
            store
        ]), {
            run
        });
        if (isServer && !props['client:only']) {
            const jsx$1 = Promise.all([
                reactCmpQrl.resolve(),
                import('./server-9ac6caad.js')
            ]).then(([Cmp, server])=>{
                const html = server.render(Cmp, filterProps(props));
                return /*#__PURE__*/ jsx(Host, {
                    dangerouslySetInnerHTML: html,
                    [_IMMUTABLE]: [
                        "dangerouslySetInnerHTML"
                    ]
                });
            });
            return /*#__PURE__*/ jsx(Fragment, {
                children: jsx$1
            });
        }
        return /*#__PURE__*/ jsx(Host, {
            children: /*#__PURE__*/ jsx(SkipRerender, {})
        });
    }, "qwikifyQrl_component_zH94hIe0Ick", [
        reactCmpQrl
    ]), {
        tagName: 'qwik-wrap'
    });
}
const filterProps = (props)=>{
    const obj = {};
    Object.keys(props).forEach((key)=>{
        if (!key.startsWith('client:')) obj[key] = props[key];
    });
    return obj;
};
const qwikify$ = implicit$FirstArg(qwikifyQrl);

async function renderToString(rootNode, opts) {
    const mod = await import('./server-9ac6caad.js');
    const result = await mod.renderToString(rootNode, opts);
    const styles = mod.getGlobalStyleTag(result.html);
    const finalHtml = styles + result.html;
    return {
        ...result,
        html: finalHtml
    };
}

export { qwikify$, qwikifyQrl, renderToString };
        
============================= qwikifyqrl_component_usewatch_x04jc5xep1u.mjs (ENTRY POINT)==

import { _auto_filterProps as filterProps } from "../node_modules/@builder.io/qwik-react/index.qwik.mjs";
import { isBrowser } from "@builder.io/qwik/build";
import { noSerialize } from "@builder.io/qwik";
import { useLexicalScope } from "@builder.io/qwik";
export const qwikifyQrl_component_useWatch_x04JC5xeP1U = async (track)=>{
    const [hostElement, props, reactCmpQrl, store] = useLexicalScope();
    track(props);
    if (isBrowser) {
        if (store.data) store.data.root.render(store.data.client.Main(store.data.cmp, filterProps(props)));
        else {
            const [Cmp, client] = await Promise.all([
                reactCmpQrl.resolve(),
                import("../node_modules/@builder.io/qwik-react/client-f762f78c.js")
            ]);
            let root;
            if (hostElement.childElementCount > 0) root = client.hydrateRoot(hostElement, client.Main(Cmp, filterProps(props), store.event));
            else {
                root = client.createRoot(hostElement);
                root.render(client.Main(Cmp, filterProps(props)));
            }
            store.data = noSerialize({
                client,
                cmp: Cmp,
                root
            });
        }
    }
};
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/node_modules/@builder.io/qwik-react/index.qwik.mjs\"],\"names\":[],\"mappings\":\";;;;yDAa8B,OAAO;IACzB,MAAM,CAAC,aAAa,OAAO,aAAa,MAAM,GAAG;IACjD,MAAM;IACN,IAAI;QACA,IAAI,MAAM,IAAI,EAAE,MAAM,IAAI,CAAC,IAAI,CAAC,MAAM,CAAC,MAAM,IAAI,CAAC,MAAM,CAAC,IAAI,CAAC,MAAM,IAAI,CAAC,GAAG,EAAE,YAAY;aACrF;YACD,MAAM,CAAC,KAAK,OAAO,GAAG,MAAM,QAAQ,GAAG,CAAC;gBACpC,YAAY,OAAO;gBACnB,MAAM,CAAC;aACV;YACD,IAAI;YACJ,IAAI,YAAY,iBAAiB,GAAG,GAAG,OAAO,OAAO,WAAW,CAAC,aAAa,OAAO,IAAI,CAAC,KAAK,YAAY,QAAQ,MAAM,KAAK;iBACzH;gBACD,OAAO,OAAO,UAAU,CAAC;gBACzB,KAAK,MAAM,CAAC,OAAO,IAAI,CAAC,KAAK,YAAY;YAC7C;YACA,MAAM,IAAI,GAAG,YAAY;gBACrB;gBACA,KAAK;gBACL;YACJ;QACJ;;AAER\"}")
/*
{
  "origin": "../node_modules/@builder.io/qwik-react/index.qwik.mjs",
  "name": "qwikifyQrl_component_useWatch_x04JC5xeP1U",
  "entry": null,
  "displayName": "qwikifyQrl_component_useWatch",
  "hash": "x04JC5xeP1U",
  "canonicalFilename": "qwikifyqrl_component_usewatch_x04jc5xep1u",
  "extension": "mjs",
  "parent": "qwikifyQrl_component_zH94hIe0Ick",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    693,
    1746
  ]
}
*/
============================= qwikifyqrl_component_zh94hie0ick.mjs (ENTRY POINT)==

import { Fragment } from "@builder.io/qwik/jsx-runtime";
import { SkipRerender } from "@builder.io/qwik";
import { _jsxBranch } from "@builder.io/qwik";
import { _jsxC } from "@builder.io/qwik";
import { _auto_filterProps as filterProps } from "../node_modules/@builder.io/qwik-react/index.qwik.mjs";
import { isServer } from "@builder.io/qwik/build";
import { qrl } from "@builder.io/qwik";
import { useHostElement } from "@builder.io/qwik";
import { useLexicalScope } from "@builder.io/qwik";
import { useStore } from "@builder.io/qwik";
import { useTaskQrl } from "@builder.io/qwik";
export const qwikifyQrl_component_zH94hIe0Ick = (props)=>{
    _jsxBranch();
    const [reactCmpQrl] = useLexicalScope();
    const hostElement = useHostElement();
    const store = useStore({});
    let run;
    if (props['client:visible']) run = 'visible';
    else if (props['client:load'] || props['client:only']) run = 'load';
    useTaskQrl(/*#__PURE__*/ qrl(()=>import("./qwikifyqrl_component_usewatch_x04jc5xep1u.mjs"), "qwikifyQrl_component_useWatch_x04JC5xeP1U", [
        hostElement,
        props,
        reactCmpQrl,
        store
    ]), {
        run
    });
    if (isServer && !props['client:only']) {
        const jsx$1 = Promise.all([
            reactCmpQrl.resolve(),
            import("../node_modules/@builder.io/qwik-react/server-9ac6caad.js")
        ]).then(([Cmp, server])=>{
            const html = server.render(Cmp, filterProps(props));
            return /*#__PURE__*/ _jsxC(Host, {
                dangerouslySetInnerHTML: html,
                [_IMMUTABLE]: [
                    "dangerouslySetInnerHTML"
                ]
            }, 3, "mR_0");
        });
        return /*#__PURE__*/ _jsxC(Fragment, {
            children: jsx$1
        }, 1, "mR_1");
    }
    return /*#__PURE__*/ _jsxC(Host, {
        children: /*#__PURE__*/ _jsxC(SkipRerender, null, 3, "mR_2")
    }, 1, "mR_3");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/node_modules/@builder.io/qwik-react/index.qwik.mjs\"],\"names\":[],\"mappings\":\";;;;;;;;;;;gDAMiD,CAAC;;IAC1C,MAAM,CAAC,YAAY,GAAG;IACtB,MAAM,cAAc;IACpB,MAAM,QAAQ,SAAS,CAAC;IACxB,IAAI;IACJ,IAAI,KAAK,CAAC,iBAAiB,EAAE,MAAM;SAC9B,IAAI,KAAK,CAAC,cAAc,IAAI,KAAK,CAAC,cAAc,EAAE,MAAM;IAC7D;;;;;QA4BI;QACA;IACJ;IACA,IAAI,YAAY,CAAC,KAAK,CAAC,cAAc,EAAE;QACnC,MAAM,QAAQ,QAAQ,GAAG,CAAC;YACtB,YAAY,OAAO;YACnB,MAAM,CAAC;SACV,EAAE,IAAI,CAAC,CAAC,CAAC,KAAK,OAAO;YAClB,MAAM,OAAO,OAAO,MAAM,CAAC,KAAK,YAAY;YAC5C,OAAO,WAAW,GAAG,MAAI;gBACrB,yBAAyB;gBACzB,CAAC,WAAW,EAAE;oBACV;iBACH;;QAET;QACA,OAAO,WAAW,GAAG,MAAI;YACrB,UAAU;;IAElB;IACA,OAAO,WAAW,GAAG,MAAI;QACrB,UAAU,WAAW,GAAG,MAAI;;AAEpC\"}")
/*
{
  "origin": "../node_modules/@builder.io/qwik-react/index.qwik.mjs",
  "name": "qwikifyQrl_component_zH94hIe0Ick",
  "entry": null,
  "displayName": "qwikifyQrl_component",
  "hash": "zH94hIe0Ick",
  "canonicalFilename": "qwikifyqrl_component_zh94hie0ick",
  "extension": "mjs",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "loc": [
    373,
    2674
  ]
}
*/
============================= ../node_modules/@builder.io/qwik-react/index.qwik.mjs ==

import { qrl } from "@builder.io/qwik";
import { componentQrl, implicit$FirstArg } from '@builder.io/qwik';
function qwikifyQrl(reactCmpQrl) {
    return /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("../../../src/qwikifyqrl_component_zh94hie0ick.mjs"), "qwikifyQrl_component_zH94hIe0Ick", [
        reactCmpQrl
    ]), {
        tagName: 'qwik-wrap'
    });
}
const filterProps = (props)=>{
    const obj = {};
    Object.keys(props).forEach((key)=>{
        if (!key.startsWith('client:')) obj[key] = props[key];
    });
    return obj;
};
const qwikify$ = implicit$FirstArg(qwikifyQrl);
async function renderToString(rootNode, opts) {
    const mod = await import('./server-9ac6caad.js');
    const result = await mod.renderToString(rootNode, opts);
    const styles = mod.getGlobalStyleTag(result.html);
    const finalHtml = styles + result.html;
    return {
        ...result,
        html: finalHtml
    };
}
export { qwikify$, qwikifyQrl, renderToString };
export { filterProps as _auto_filterProps };


Some("{\"version\":3,\"sources\":[\"/user/qwik/node_modules/@builder.io/qwik-react/index.qwik.mjs\"],\"names\":[],\"mappings\":\";AACA,SAAS,YAAY,EAAgG,iBAAiB,QAAQ,mBAAmB;AAIjK,SAAS,WAAW,WAAW;IAC3B,OAAO,WAAW,GAAG;;QA4DjB;QACA,SAAS;IACb;AACJ;AACA,MAAM,cAAc,CAAC;IACjB,MAAM,MAAM,CAAC;IACb,OAAO,IAAI,CAAC,OAAO,OAAO,CAAC,CAAC;QACxB,IAAI,CAAC,IAAI,UAAU,CAAC,YAAY,GAAG,CAAC,IAAI,GAAG,KAAK,CAAC,IAAI;IACzD;IACA,OAAO;AACX;AACA,MAAM,WAAW,kBAAkB;AAEnC,eAAe,eAAe,QAAQ,EAAE,IAAI;IACxC,MAAM,MAAM,MAAM,MAAM,CAAC;IACzB,MAAM,SAAS,MAAM,IAAI,cAAc,CAAC,UAAU;IAClD,MAAM,SAAS,IAAI,iBAAiB,CAAC,OAAO,IAAI;IAChD,MAAM,YAAY,SAAS,OAAO,IAAI;IACtC,OAAO;QACH,GAAG,MAAM;QACT,MAAM;IACV;AACJ;AAEA,SAAS,QAAQ,EAAE,UAAU,EAAE,cAAc,GAAG\"}")
== DIAGNOSTICS ==

[]
