packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_reg_ctx_name_hooks_hoisted.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 800
expression: output
---
==INPUT==


import { $, component$, server$, useStyle$ } from '@builder.io/qwik';

export const Works = component$((props) => {
    useStyle$(STYLES);
    const text = 'hola';
    return (
        <div onClick$={server$(() => console.log('in server', text))}></div>
    );
});

const STYLES = '.class {}';

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { useStyleQrl } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
import { serverQrl } from "@builder.io/qwik";
import { _regSymbol } from "@builder.io/qwik";
import { _jsxQ } from "@builder.io/qwik";
const Works_component_div_onClick_server_OsNoEFc5SM4 = /*#__PURE__*/ _regSymbol(()=>console.log('in server', 'hola'), "OsNoEFc5SM4");
const Works_component_t45qL4vNGv0 = (props)=>{
    useStyleQrl(/*#__PURE__*/ inlinedQrl(STYLES, "Works_component_useStyle_i40UL9JyQpg"));
    return /*#__PURE__*/ _jsxQ("div", {
        onClick$: serverQrl(/*#__PURE__*/ inlinedQrl(Works_component_div_onClick_server_OsNoEFc5SM4, "Works_component_div_onClick_server_OsNoEFc5SM4"))
    }, null, null, 2, "u6_0");
};
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(Works_component_t45qL4vNGv0, "Works_component_t45qL4vNGv0"));
const STYLES = '.class {}';
export { STYLES as _auto_STYLES };


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;gFAO+B,IAAM,QAAQ,GAAG,CAAC,aAFhC;oCAFe,CAAC;IAC7B,qCAAU;IAEV,qBACI,MAAC;QAAI,UAAU;;AAEvB;AANA,OAAO,MAAM,sBAAQ,mGAMlB;AAEH,MAAM,SAAS\"}")
== DIAGNOSTICS ==

[]
